--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,7 @@ body{
   border: none;
   padding: 5px;
   font-size: 20px;
-  background: #e0e0e0;
+  background: red;
   box-shadow:  28px 28px 55px #868686,
              -28px -28px 55px #ffffff;
   
