--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body{
-  background-color: #333;
-  color: white;
+  background-color:#e4ebf5;
+  color: blue;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,7 +14,7 @@ body{
 
 
 .bgTask{
-  background-color: #555;
+  background-color:#c8d0ef;
   border-radius: 6px;
   margin-bottom: 20px;
   padding: 10px 140px 10px 15px;
@@ -29,7 +29,7 @@ body{
 }
 
 .taskNumber{
-  color: #999;
+  color: blue;
   border: 1px solid #999;
   border-radius: 50px;
   width: 26px;
@@ -60,7 +60,7 @@ body{
   display: inline-block;
   margin: 0px 10px 0px 10px;
   cursor: pointer;
-  color: greenyellow;
+  color: blue;
   margin-left: 20px;
 }
 
@@ -82,10 +82,6 @@ body{
   border: none;
   padding: 5px;
   font-size: 20px;
-  background: red;
-  box-shadow:  28px 28px 55px #868686,
-             -28px -28px 55px #ffffff;
-  
 }
 
 .btn-addTask{
