--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-  background-color:#e4ebf5;
+  background-color: black;
   color: blue;
   display: flex;
   align-items: center;
@@ -7,8 +7,10 @@ body{
 }
 
 .App {
+  background-color:#ecf0f3;
   text-align: center;
-  width: 510px;
+  width: 610px;
+  margin-top: 30px;
  
 }
 
@@ -21,6 +23,10 @@ body{
   text-align: left;
   font-size: 22px;
   position: relative;
+  border: none;
+  box-shadow: 3px 3px -3px #b1b1b1,
+  3px -3px 3px #fff;
+  
 }
 
 .bgTask div{
@@ -56,6 +62,11 @@ body{
   display: inline-block;
 }
 
+p{
+  color: #999;
+  font-style: italic;
+}
+
 .bgTask .iconWrapper span{
   display: inline-block;
   margin: 0px 10px 0px 10px;
@@ -65,7 +76,7 @@ body{
 }
 
 .bgTask .iconWrapper span:hover{
-  color: aquamarine;
+  color: rgb(125, 125, 236);
 }
 
 .row-addTask{
@@ -74,20 +85,37 @@ body{
   margin-bottom: 50px;
 }
 
-.form-addTask{
-  height: 30px;
+.input-addTask{
+  background-color: transparent;
+  color:blue;
+  height: 38px;
   width: 400px;
-  border-right: none;
+  border-inline-end: none;
   border-radius: 5px 0px 0px 5px;
   border: none;
-  padding: 5px;
+  padding-left: 20px;
   font-size: 20px;
+  box-shadow: inset 3px 4px 4px #cbced1, 
+              inset -8px -8px 8px #fff;
+}
+
+textarea:focus, input:focus{
+  outline: none;
 }
 
 .btn-addTask{
-  height:45px;
+  height:40px;
   width: 100px;
   border-left: none;
   border-radius: 0px 5px 5px 0px;
-  margin-top:-3px;
+  margin-top:-1px;
+  border: none;
+  color: blue;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 3px 3px 3px #b1b1b1,
+              -3px -3px 3px #fff;
+}
+.btn-addTask:hover{
+  color: rgb(125, 125, 236);
 }
